mudança de background

--- a/index.html
+++ b/index.html
@@ -38,5 +38,12 @@
         </div><!-- interface-->
     </header>
 
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                
+            </div><!--interface-->
+        </section><!--topo_do_site-->
+    </main>
 </body>
 </html>
