--- a/portifolio/Cabeçalho/index.html
+++ b/portifolio/Cabeçalho/index.html
@@ -9,7 +9,7 @@
     <title>Meu Site</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/style.css"> <!-- Corrigido o nome do arquivo CSS -->
+    <link rel="stylesheet" href="/portifolio/style.css"> <!-- Corrigido o nome do arquivo CSS -->
 </head>
 
 <body>
@@ -24,9 +24,9 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/Cabeçalho/sobreMin.html">Sobre</a></li>
+                    <li><a href="/Cabeçalho/projetos.html">Curriculo</a></li>
                 </ul>
             </nav>
 
@@ -37,13 +37,28 @@
             </div>
         </div><!-- interface-->
     </header>
-
     <main>
-        <section class="topo-do-site">
+        <section class="topo-site">
             <div class="interface">
-                
-            </div><!--interface-->
-        </section><!--topo_do_site-->
+                <div class="flex">
+                    <div class="txt-topo">
+                        <h1>Murilo Pires <span>.</span>
+                        </h1>
+                        <p>Estudante de analise e desenvolvimento de sistemas</p>
+
+                        <div class="btn-contato">
+                            <a href="#">
+                                <button>Entre em contato</button>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="img-topo">
+                        <img src="/portifolio/imagens/chopper.gif" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
